fix(parcel): add relative asset imports

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,6 +6,6 @@
     <title>Galaxy Blast</title>
   </head>
   <body>
-    <script src="js/index.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
